<resources>
    <string name="app_name">LoginFragments</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Wrong Login or Password</string>
    <string name="shrine">SHRINE</string>
</resources>